RESOLVED FIXED55367
FECompositeElement changes doesn't require relayout.
https://bugs.webkit.org/show_bug.cgi?id=55367
Summary FECompositeElement changes doesn't require relayout.
Renata Hodovan
Reported 2011-02-28 05:45:19 PST
FECompositeElement changes doesn't require relayout.
Attachments
Proposed patch (6.09 KB, patch)
2011-02-28 05:51 PST, Renata Hodovan
kling: review+
Renata Hodovan
Comment 1 2011-02-28 05:51:52 PST
Created attachment 84045 [details] Proposed patch
Andreas Kling
Comment 2 2011-02-28 05:54:58 PST
Comment on attachment 84045 [details] Proposed patch View in context: https://bugs.webkit.org/attachment.cgi?id=84045&action=review r=me > Source/WebCore/ChangeLog:11 > + No new tests are needed because this modificiation is covered by the dynamic update tests of FEComposite. Typo, modification.
Renata Hodovan
Comment 3 2011-02-28 06:03:28 PST
Note You need to log in before you can comment on or make changes to this bug.